<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference
        android:key="Search"
        android:title="@string/search_title"
        android:summary="@string/search_summary"
    	android:defaultValue="http://search.twitter.com/search.json?q=" />
    <EditTextPreference
        android:key="Distancia"
        android:title="@string/range_title"
        android:summary="@string/range_summary"
    	android:defaultValue="100" />
	<ListPreference
        android:key="Unidades"
        android:title="@string/units_title"
        android:summary="@string/units_summary"
        android:entries="@array/units_names"
    	android:entryValues="@array/units_names_values"
    	android:defaultValue="km" />
	<EditTextPreference
        android:key="ResultadosPorPag"
        android:title="@string/rpp_title"
        android:summary="@string/rpp_summary"
    	android:defaultValue="25" />
	<PreferenceCategory 
	    android:title="@string/prefs_localizacion">
	    <CheckBoxPreference
	        android:key="LocManual"
	        android:title="@string/locman_title"
	        android:summary="@string/locman_summary"
	    	android:defaultValue="true" />
		<EditTextPreference
		    android:key="Latitud"
		    android:title="@string/lat_title"
		    android:summary="@string/lat_summary"
		   	android:defaultValue="42.562350299483190" />
		<EditTextPreference
		    android:key="Longitud"
		    android:title="@string/lon_title"
		    android:summary="@string/lon_summary"
		   	android:defaultValue="-8.825798034667968" />
	</PreferenceCategory>
</PreferenceScreen>
